kubernetes/apps/observability/headlamp/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app headlamp
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: *app
spec:
  hostnames: ["headlamp.${ROOT_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      port: 443
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
